@@ -1,3 +1,9 @@
+2019-03-05  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* config/riscv/riscv.c (riscv_pass_fpr_single): Add offset
+	parameter, and make use of it.
+	(riscv_get_arg_info): Pass offset to riscv_pass_fpr_single.
+
 2019-03-07  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/89585
